<resources>
    <string name="app_name">Agenda Zona</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="action_settings_eliminar">Eliminar</string>
    <string name="action_settings_modificar">Modificar</string>
    <string name="action_settings_agregar">Agregar</string>
    <string name="title_activity_login">Sign in</string>

    <string name="label_register">Registrar Usuario</string>
    <string name="label_recuperar">Recuperar Usuario</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_tipo">Tipo</string>
    <string name="prompt_pregunta">Pregunta</string>
    <string name="prompt_respuesta">Respuesta</string>

    <string name="action_sign_in">Loggin</string>
    <string name="action_register_in">Registrar</string>
    <string name="action_modificar_in">Modificar</string>
    <string name="action_recuperar_in">Recuperar Password</string>


    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">el formato del correo es invalido</string>
    <string name="error_incorrect_usuario">Usuario Incorrecto</string>
    <string name="error_incorrect_password">La Contraseña es Incorrecta</string>
    <string name="error_field_required">Porfavor llene este campo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
